--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+    <body>
+    <div class="header">
+        <h1 class="logo">Header Logo</h1>
+        <header class="logo-links">
+            <ol>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ol>
+        </header>
+    </div>
+
 </body>
 </html>
