--- a/index.html
+++ b/index.html
@@ -18,5 +18,12 @@
         </header>
     </div>
 
+    <div class="section-1">
+        <div class="text">This wbesite is awesome</div>
+        <div class="text">this website has some subtext that goes here unde the rmain title. it's a smaller font and the color is lower contrast</div>
+        <div class="text"></div>
+        <img src="" alt="">
+    </div> 
+
 </body>
 </html>
