--- a/index.html
+++ b/index.html
@@ -25,5 +25,18 @@
         <img src="" alt="">
     </div> 
 
+    <div class="section-2">
+        <img src="" alt="">
+        <div class="text">this is some subtext under an illustration or image</div>
+        <img src="" alt="">
+        <div class="text">this is some subtext under an illustration or image</div>
+        <img src="" alt="">
+        <div class="text">this is some subtext under an illustration or image</div>
+        <img src="" alt="">
+        <div class="text">this is some subtext under an illustration or image</div>
+    </div>
+
+        
+
 </body>
 </html>
