--- a/index.html
+++ b/index.html
@@ -36,7 +36,13 @@
         <div class="text">this is some subtext under an illustration or image</div>
     </div>
 
-        
+    <div class="section-3">
+        <p><em>this is an inspiring quote, or a testimonial from a customer. 
+            Maybe it's just filling up space, or maybe people will actually read it.
+            Who knows? All i know is that it looks nice.
+        </em></p>
+        <p><strong>-Thor, God of Thunder</strong></p>
+    </div>
 
 </body>
 </html>
