--- a/index.html
+++ b/index.html
@@ -44,5 +44,12 @@
         <p><strong>-Thor, God of Thunder</strong></p>
     </div>
 
+    <div class="section-4">
+        <div class="container">
+            <div>call to action! It's time!</div>
+            <div>sign up for our product by clicking that button right over there!</div>
+            <button class="button">Sign up</button>
+    </div>
+
 </body>
 </html>
