--- a/index.html
+++ b/index.html
@@ -51,5 +51,8 @@
             <button class="button">Sign up</button>
     </div>
 
+    <div class="footer">
+        <div>Copyright © The Odin Project 2021</div>
+    </div>
 </body>
 </html>
