--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
     <div class="section-1">
         <div class="text">This wbesite is awesome</div>
         <div class="text">this website has some subtext that goes here unde the rmain title. it's a smaller font and the color is lower contrast</div>
-        <div class="text"></div>
+        <button class="Sign-up">Sign up</button>
         <img src="" alt="">
     </div> 
 
     <div class="section-2">
+        <h1>Some random information.</h1>
         <img src="" alt="">
         <div class="text">this is some subtext under an illustration or image</div>
         <img src="" alt="">
