added containers for styling

--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
     </div>
 
     <div class="section-1">
-        <div class="text">This wbesite is awesome</div>
-        <div class="text">this website has some subtext that goes here unde the rmain title. it's a smaller font and the color is lower contrast</div>
-        <button class="Sign-up">Sign up</button>
+
+        <div class="section-1-container">
+            <div class="text">This wbesite is awesome</div>
+            <div class="text">this website has some subtext that goes here unde the rmain title. it's a smaller font and the color is lower contrast</div>
+            <button class="Sign-up">Sign up</button>
+        </div>
         <img src="" alt="">
     </div> 
 
@@ -46,7 +49,7 @@
     </div>
 
     <div class="section-4">
-        <div class="container">
+        <div class="section-4-container">
             <div>call to action! It's time!</div>
             <div>sign up for our product by clicking that button right over there!</div>
             <button class="button">Sign up</button>
