--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 </head>
     <body>
     <div class="header">
-        <h1 class="logo">Header Logo</h1>
-        <header class="logo-links">
-            <ol>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
-            </ol>
+        <div class="logo">Header Logo</div>
+        <ol class="logo-links">
+            <li> <a href="">header link one</a></li>
+            <li><a href="">header link two</a></li>
+            <li><a href="">header link three</a></li>
+        </ol>
         </header>
     </div>
 
@@ -58,5 +57,6 @@
     <div class="footer">
         <div>Copyright © The Odin Project 2021</div>
     </div>
+
 </body>
 </html>
