--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-    <body>
+<body>
     <div class="header">
         <div class="logo">Header Logo</div>
-        <ol class="logo-links">
-            <li> <a href="">header link one</a></li>
-            <li><a href="">header link two</a></li>
-            <li><a href="">header link three</a></li>
-        </ol>
+            <ol class="logo-links">
+                <li><a href="">header link one</a></li>
+                <li><a href="">header link two</a></li>
+                <li><a href="">header link three</a></li>
+            </ol>
         </header>
     </div>
 
@@ -29,14 +29,24 @@
 
     <div class="section-2">
         <h1>Some random information.</h1>
-        <img src="" alt="">
-        <div class="text">this is some subtext under an illustration or image</div>
-        <img src="" alt="">
-        <div class="text">this is some subtext under an illustration or image</div>
-        <img src="" alt="">
-        <div class="text">this is some subtext under an illustration or image</div>
-        <img src="" alt="">
-        <div class="text">this is some subtext under an illustration or image</div>
+        <div class="section-2-container">
+            
+            <div class="img-container">
+                <img src="" alt="">
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>  
+            <div class="img-container">
+                <img src="" alt="">
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div> 
+            <div class="img-container">
+                <img src="" alt="">
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div> 
+            <div class="img-container">
+                <img src="" alt="">
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div> 
     </div>
 
     <div class="section-3">
@@ -57,6 +67,5 @@
     <div class="footer">
         <div>Copyright © The Odin Project 2021</div>
     </div>
-
 </body>
 </html>
