--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     <div class="section-2">
         <h1>Some random information.</h1>
         <div class="section-2-container">
-            
             <div class="img-container">
                 <img src="" alt="">
                 <div class="text">this is some subtext under an illustration or image</div>
@@ -46,14 +45,14 @@
             <div class="img-container">
                 <img src="" alt="">
                 <div class="text">this is some subtext under an illustration or image</div>
-            </div> 
+            </div>
+        </div>
     </div>
 
     <div class="section-3">
         <p><em>this is an inspiring quote, or a testimonial from a customer. 
             Maybe it's just filling up space, or maybe people will actually read it.
-            Who knows? All i know is that it looks nice.
-        </em></p>
+            Who knows? All i know is that it looks nice.</em></p>
         <p><strong>-Thor, God of Thunder</strong></p>
     </div>
 
@@ -62,10 +61,9 @@
             <div>call to action! It's time!</div>
             <div>sign up for our product by clicking that button right over there!</div>
             <button class="button">Sign up</button>
+        </div>
     </div>
 
-    <div class="footer">
-        <div>Copyright © The Odin Project 2021</div>
-    </div>
+    <div class="footer">Copyright © The Odin Project 2021<div>
 </body>
 </html>
