minor chnages required for styling

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
     <div class="section-1">
         <div class="section-1-container">
-            <div class="text">This wbesite is awesome</div>
-            <div class="text">this website has some subtext that goes here unde the rmain title. it's a smaller font and the color is lower contrast</div>
-            <button class="Sign-up">Sign up</button>
+            <div class="main-text">This website is awesome</div>
+            <div class="text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+            <button class="sign-up">Sign up</button>
         </div>
-        <img src="" alt="">
+        <img src="" alt="this is a placeholder for an image">
     </div> 
 
     <div class="section-2">
