--- a/index.html
+++ b/index.html
@@ -48,10 +48,17 @@
     </div>
 
     <div class="section-3">
-        <p><em>this is an inspiring quote, or a testimonial from a customer. 
-            Maybe it's just filling up space, or maybe people will actually read it.
-            Who knows? All i know is that it looks nice.</em></p>
-        <p><strong>-Thor, God of Thunder</strong></p>
+        <div class="section-3-container">
+                <div class="quote">
+                    <p><em>This is an inspiring quote, or a testimonial from a customer.
+                    Maybe it's just filling up space, or maybe people will actually read it.
+                    Who knows? All i know is that it looks nice.</em></p>
+                </div>
+            
+                <div class="thor">
+                    <p><strong>-Thor, God of Thunder</strong></p>
+                </div>
+        </div>
     </div>
 
     <div class="section-4">
