Complete website website looks close to example given. The code is most likely a mess. dont fully understand why things end up the way are positioned. need to understand how flexbox and scrolling works if flex box is used for the whole page. may have overcomplicated some parts.

--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@
 
     <div class="section-4">
         <div class="section-4-container">
-            <div>call to action! It's time!</div>
-            <div>sign up for our product by clicking that button right over there!</div>
+            <div class="box-2">
+                <div class="action">Call to action! It's time!</div>
+                <div class="text">Sign up for our product by clicking that button right over there!</div>
+            </div>
             <button class="button">Sign up</button>
         </div>
     </div>
